Modifed few changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">
                     <a href="https://bit.ly/tws-junoon" style="text-decoration: none; color: inherit;">
-                        DevOps (Junoon Batch 8) Starts October 5th (Sat-Sun 9 to 12)
+                        WELCOME TO MY PAGE
                     </a>
                 </h1>
                 <!-- Icon Divider-->
@@ -52,7 +52,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Engineer - Trainer - Learner</p>
+                <p class="masthead-subheading font-weight-light mb-0">AWS DevOps Trainee</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -138,7 +138,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ms-auto"><p class="lead">DevOps Junoon (Batch 8) <br> Starts October 5th (Weekends 9 A.M to 12 P.M)  <br> Covering A-Z of DevOps.</p></div>
+                    <div class="col-lg-4 ms-auto"><p class="lead">DevOps Batch-1 <br> Starts April 5th (Weekends 9 A.M to 12 P.M)  <br> Covering A-Z of DevOps.</p></div>
                     <div class="col-lg-4 me-auto"><p class="lead">See you in the Live Sessions. </p></div>
                 </div>
                 <!-- About Section Button-->
@@ -154,7 +154,7 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">YOUR DETAILS</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -229,9 +229,9 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            2215 John Daniel Drive
+                            White house, Begumpet
                             <br />
-                            Clark, MO 65243
+                            Floor-4
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
@@ -256,7 +256,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; TrainWithShubham.com 2024</small></div>
+            <div class="container"><small>Copyright &copy; trainwithrohith.com 2025</small></div>
         </div>
         <!-- Portfolio Modals-->
         <!-- Portfolio Modal 1-->
